--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@docusaurus/module-type-aliases": "^3.4.0",
     "@docusaurus/tsconfig": "^3.4.0",
     "@docusaurus/types": "^3.4.0",
+    "docusaurus-plugin-openapi": "^0.7.5",
     "typescript": "~5.2.2"
   },
   "browserslist": {
